--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.17.0",
     "react-slider": "^2.0.6",
     "router-dom": "^2.2.11"
   },
