--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
+    "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
-    "router-dom": "^2.2.11"
+    "router-dom": "^2.2.11",
+    "slice-ansi": "^6.0.0",
+    "slick-carousel": "^1.8.1",
+    "slider-pro-js": "^1.0.1",
+    "switch-case": "^2.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
