--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
+    "react-youtube": "^10.1.0",
     "router-dom": "^2.2.11",
     "slice-ansi": "^6.0.0",
     "slick-carousel": "^1.8.1",
